<resources>
    <string name="app_name" translatable="false">Airsoft Bomb</string>
    <string name="close">close</string>
    <string name="bombTimer">Bomb timer</string>
    <string name="min">Min</string>
    <string name="sec">Sec</string>
    <string name="count2Plant">number of characters for PLANT</string>
    <string name="count2Defuse">number of characters for DEFUSE</string>
    <string name="adminPassword">Admin password</string>
    <string name="settings">Settings</string>
    <string name="startactivity">Start with the settings</string>
    <string name="howtoplay">How to play \n \n For PLANTING bomb, you need to enter a password consisting of random characters that are displayed in the upper left corner of the bomb screen. for DEFUSING, you need to do the same.</string>
</resources>