<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstrainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:drawable/screen_background_dark"
    android:backgroundTint="@color/BackGroundColor"
    android:visibility="visible"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="top"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/materialToolbar"
        app:layout_constraintStart_toStartOf="@+id/materialToolbar"
        app:layout_constraintTop_toBottomOf="@+id/materialToolbar">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/b1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:backgroundTint="@color/ButtonColor"
                android:text="1"
                android:textColor="@color/black"
                android:textSize="60dp"
                android:visibility="visible"
                app:rippleColor="@color/black" />

            <Button
                android:id="@+id/b2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:backgroundTint="@color/ButtonColor"
                android:text="2"
                android:textColor="@color/black"
                android:textSize="60dp"
                android:visibility="visible"
                app:rippleColor="@color/black" />

            <Button
                android:id="@+id/b3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:backgroundTint="@color/ButtonColor"
                android:text="3"
                android:textColor="@color/black"
                android:textSize="60dp"
                android:visibility="visible"
                app:rippleColor="@color/black" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/b4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:backgroundTint="@color/ButtonColor"
                android:text="4"
                android:textColor="@color/black"
                android:textSize="60dp"
                android:visibility="visible"
                app:rippleColor="@color/black" />

            <Button
                android:id="@+id/b5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:backgroundTint="@color/ButtonColor"
                android:text="5"
                android:textColor="@color/black"
                android:textSize="60dp"
                android:visibility="visible"
                app:rippleColor="@color/black" />

            <Button
                android:id="@+id/b6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:backgroundTint="@color/ButtonColor"
                android:text="6"
                android:textColor="@color/black"
                android:textSize="60dp"
                android:visibility="visible"
                app:rippleColor="@color/black" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/b7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:backgroundTint="@color/ButtonColor"
                android:text="7"
                android:textColor="@color/black"
                android:textSize="60dp"
                android:visibility="visible"
                app:rippleColor="@color/black" />

            <Button
                android:id="@+id/b8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:backgroundTint="@color/ButtonColor"
                android:text="8"
                android:textColor="@color/black"
                android:textSize="60dp"
                android:visibility="visible"
                app:rippleColor="@color/black" />

            <Button
                android:id="@+id/b9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:backgroundTint="@color/ButtonColor"
                android:text="9"
                android:textColor="@color/black"
                android:textSize="60dp"
                android:visibility="visible"
                app:rippleColor="@color/black" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/bStar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:backgroundTint="@color/ButtonColor"
                android:text="*"
                android:textColor="@color/black"
                android:textSize="60dp"
                android:visibility="visible"
                app:rippleColor="@color/black" />

            <Button
                android:id="@+id/b0"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:backgroundTint="@color/ButtonColor"
                android:text="0"
                android:textColor="@color/black"
                android:textSize="60dp"
                android:visibility="visible"
                app:rippleColor="@color/black" />

            <Button
                android:id="@+id/bJail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:backgroundTint="@color/ButtonColor"
                android:text="#"
                android:textColor="@color/black"
                android:textSize="60dp"
                android:visibility="visible"
                app:rippleColor="@color/black" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/bAdmin1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:alpha="0.01"
                android:soundEffectsEnabled="false"
                android:text="AB1"
                android:textSize="24sp"
                android:visibility="visible" />

            <Button
                android:id="@+id/bAdmin2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:alpha="0.01"
                android:soundEffectsEnabled="false"
                android:text="AB2"
                android:textSize="24sp"
                android:visibility="visible" />

            <Button
                android:id="@+id/bAdmin3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:alpha="0.01"
                android:soundEffectsEnabled="false"
                android:text="AB3"
                android:textSize="24sp"
                android:visibility="visible" />

        </TableRow>
    </TableLayout>

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="14dp"
        android:background="@android:drawable/dialog_frame"
        android:backgroundTint="@color/BombScreen"
        android:minHeight="?attr/actionBarSize"
        android:onClick="ActivityTEst"
        android:theme="?attr/actionBarTheme"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvRandomSumbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:text="0"
        android:textSize="34sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="@+id/materialToolbar"
        app:layout_constraintTop_toTopOf="@+id/materialToolbar" />

    <TextView
        android:id="@+id/tvTimerS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:gravity="end"
        android:text="00:00"
        android:textSize="60sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/materialToolbar"
        app:layout_constraintEnd_toEndOf="@+id/materialToolbar"
        app:layout_constraintTop_toTopOf="@+id/materialToolbar"
        app:layout_constraintVertical_bias="0.38" />

    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="12dp"
        android:textSize="24sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/materialToolbar"
        app:layout_constraintStart_toStartOf="@+id/materialToolbar" />

    <androidx.cardview.widget.CardView
        android:id="@+id/adminPanel"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:visibility="gone"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:text="@string/adminPassword"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edCount2Defuse" />

            <EditText
                android:id="@+id/edAdminPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/count2Plant"
                android:inputType="number"
                android:text="123"
                app:layout_constraintStart_toStartOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:text="@string/count2Defuse"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edCount2Plant" />

            <EditText
                android:id="@+id/edCount2Defuse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/count2Defuse"
                android:inputType="number"
                android:text="8"
                app:layout_constraintStart_toStartOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:text="@string/count2Plant"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edTimerMin" />

            <EditText
                android:id="@+id/edCount2Plant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/count2Plant"
                android:inputType="number"
                android:text="4"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <Button
                android:id="@+id/bSBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/close"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edTimerMin"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/min"
                android:inputType="number"
                android:text="0"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <EditText
                android:id="@+id/edTimerSec"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:ems="10"
                android:hint="@string/sec"
                android:imeOptions="actionNone"
                android:inputType="number"
                android:text="45"
                app:layout_constraintBottom_toBottomOf="@+id/edTimerMin"
                app:layout_constraintStart_toEndOf="@+id/edTimerMin"
                app:layout_constraintTop_toTopOf="@+id/edTimerMin" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/bombTimer"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bSBack" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>